Updated: _posts/2023-08-02-MarkGit.md

--- a/_posts/2023-08-02-MarkGit.md
+++ b/_posts/2023-08-02-MarkGit.md
@@ -3,3 +3,5 @@ title: MarkGit
 date: 2023-08-02
 ---
 又发现了一个叫做MarkGit的软件，只有git和写文本的功能，很符合需求，虽然还一小部分需要优化的地方，对文本编辑还可以，但是git的管理还是没有Working Copy完善。写段文字，测试一下功能🤔。
+
+修复了布局问题，更新一下。
