--- a/_posts/2023-08-17-Daily.md
+++ b/_posts/2023-08-17-Daily.md
@@ -3,4 +3,8 @@ title: 2023-08-17
 date: 2023-08-17
 ---
 B站视频插入测试
-<iframe src="//player.bilibili.com/player.html?aid=447335256&bvid=BV1bj411B7xe&cid=1235962419&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+
+<iframe width=“100%” src="//player.bilibili.com/player.html?aid=447335256&bvid=BV1bj411B7xe&cid=1235962419&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+
+
+<iframe width="100%" src=”https://www.youtube.com/embed/0Uhh62MUEic“ title=”YouTube video player“ frameborder=”0“ allow=”accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share“ allowfullscreen></iframe>
