--- a/_timelines/2023-08-23-Event.md
+++ b/_timelines/2023-08-23-Event.md
@@ -2,8 +2,8 @@
 date: 2023-08-23
 ---
 
-- 10.2阅读
+- 英语10.2阅读
 - 马原1.5 社会形态更替、人民群众
-- 数分强化1.4.5-1.5.5 平均值定理与Stolz公式
+- 数分强化1.4-1.5 平均值定理
 - 高代强化1.7 X^N±1的分解
 - 不背单词
