Updated: _posts/2023-08-21-Daily.md

--- a/_posts/2023-08-21-Daily.md
+++ b/_posts/2023-08-21-Daily.md
@@ -5,11 +5,11 @@ date: 2023-08-21 20:55:35 +0800
 
 啊这，不小心没保存，重新打一遍。
 
-!["AirPods Pro, warranty and iPad"](![IMG_2439](https://cdn.staticaly.com/gh/Heyya-x/picx-images-hosting@master/20230825/IMG_2439.6qomnkjlfpj4.jpeg))
+!["AirPods Pro, warranty and iPad"](https://cdn.staticaly.com/gh/Heyya-x/picx-images-hosting@master/20230825/IMG_2439.6qomnkjlfpj4.jpeg)
 
 前几天去长沙返厂的AirPods终于寄回来了。召回计划体验很不错，就是不得不吐槽一下嘉里大通物流的更新速度也太慢了，不过还在到了南昌就转成了顺丰，第二天就直接送到手里了。才知道只有AC+是会送耳塞的，原配的M号耳塞有一个已经给吹风机吹脱胶了，换成S号的勉强还能用一下。
 
-!["A pink and cool motorcycle"](![IMG_2457](https://cdn.staticaly.com/gh/Heyya-x/picx-images-hosting@master/20230825/IMG_2457.11wfkcxeyxgg.jpeg))
+!["A pink and cool motorcycle"](https://cdn.staticaly.com/gh/Heyya-x/picx-images-hosting@master/20230825/IMG_2457.11wfkcxeyxgg.jpeg)
 
 昨天下午和康康去吃红油抄手的路上看见一辆粉色摩托车，看样子应该是路边母婴店老板娘的车子，太酷了。吐槽一下江西的“不辣”，指的就是“厨师吃着不辣”，和老板娘说了口腔溃疡要分不辣的牛肉拌面，结果上来的还是带辣椒的😑。不过面倒是挺好吃了。
 
