--- a/_posts/2023-09-05-230905.md
+++ b/_posts/2023-09-05-230905.md
@@ -11,4 +11,4 @@ date: 2023-09-05 23:59:59 +0800
 
 和尚龟（沼泽侧颈龟）和哥斯拉龟（佛鳄龟）的🥚目前还没有什么动静，不知道是什么时候嫩孵化出来，还是挺期待的。
 
-![两个龟蛋埋在蛭石里。](https://cdn.staticaly.com/gh/Heyya-x/picx-images-hosting@master/IMG_2668.42wbkk0oax6o.jpeg)
+![两个龟蛋埋在蛭石里。](https://jsd.cdn.zzko.cn/gh/Heyya-x/picx-images-hosting@master/IMG_2668.42wbkk0oax6o.jpeg)
