--- a/_posts/2023-09-20-230920.md
+++ b/_posts/2023-09-20-230920.md
@@ -9,6 +9,6 @@ date: 2023-09-20 10:24:02 +0800
 
 昨天放学的时候，班上的一个小朋友送了一小盆“盆栽”给我，还提醒我记得要经常浇水，又被学生可爱到。不过回办公室看了一下，发现这些小玩意其实还是多肉上的小芽，还没有长出根来，可能放不了几天就会干枯掉吧。
 
-![IMG_2979](https://cdn.staticaly.com/gh/Heyya-x/picx-images-hosting@master/20230920/IMG_2979.1vabv8k34cyo.jpeg)
+![IMG_2979](https://jsd.cdn.zzko.cn/gh/Heyya-x/picx-images-hosting@master/20230920/IMG_2979.1vabv8k34cyo.jpeg)
 
 最近的实习上课压力挺大的，早上起来就得批学生作业，今天就用了一个早读和第一节课才改完作业，加上写教案又得花上一节课，光是备课就得花费好几个小时了。除了星期三，还要去听师傅上课，加上这周周五师傅也要来听我的课了，备课得花上好多时间。考研只有94天了🫨，已经有好几天没有看数分高代了，感觉高代的基础很散，十分薄弱，加上前期都在准备数分，预感高代要完了。☹️
