--- a/_posts/2023-12-12-231212.md
+++ b/_posts/2023-12-12-231212.md
@@ -7,11 +7,11 @@ date:2023-12-12 21:28:57 +0800
 
 之前一直想玩王国之泪，但是最近却突然没有的兴趣，更没有了买Switch的想法，一个原因是一直没找到能打开的nsp文件，另一个原因是实在肝不动游戏了。
 
-前几天买了蜘蛛的75键键盘，手感很不错，虽然这个RGB灯光并不在我的审美之上，个人觉得这个RGB灯效有点花里胡哨了。但是无奈这个键盘的品控实在是太差了，原本打算退货了重新下单， 但是无力吐槽京东这个退款不退优惠券的操作。
+前几天买了狼蛛的75键键盘，手感很不错，虽然这个RGB灯光并不在我的审美之上，个人觉得这个RGB灯效有点花里胡哨了。但是无奈这个键盘的品控实在是太差了，原本打算退货了重新下单， 但是无力吐槽京东这个退款不退优惠券的操作。
 
-![IMG_4361](https://jsd.cdn.zzko.cn/gh/Heyya-x/picx-images-hosting@master/20231212/IMG_4361.6tg6cqr4k4jk.jpeg)
+![狼蛛键盘在旋钮上有瑕疵。](https://jsd.cdn.zzko.cn/gh/Heyya-x/picx-images-hosting@master/20231212/IMG_4361.6tg6cqr4k4jk.jpeg)
 
-![IMG_4360](https://jsd.cdn.zzko.cn/gh/Heyya-x/picx-images-hosting@master/20231212/IMG_4360.n0laedxbhuo.jpeg)
+![狼蛛键盘在侧面有瑕疵。](https://jsd.cdn.zzko.cn/gh/Heyya-x/picx-images-hosting@master/20231212/IMG_4360.n0laedxbhuo.jpeg)
 
 果然还是不是科班出身，学识浅陋。这段时间在玩黄金，但是支付宝上查询黄金的买入信息不太方便，看不到往期的金价，于是打算自己写一个App管理一下数据。但是黄金交易价格的api每天的使用次数只有50次，想着把数据存在服务器上，再由App到服务器获取数据。这个时候发现自己对后端完全没有了解。
 
