--- a/_posts/2023-12-12-231212.md
+++ b/_posts/2023-12-12-231212.md
@@ -5,7 +5,7 @@ date:2023-12-12 21:28:57 +0800
 
 自从找到工作之后，也就闲了一点下来。抓着这几天空闲的时间，终于通关了GTA，本以为最终的结局是三个人中必定会死一个，于是我选择的是杀死崔佛（虽然不是很喜欢这个角色）。没想到选择自杀的结局才能让三个人都活下来，这是我认为比较圆满的结局。
 
-之前一直想玩王国之泪，但是最近却突然没有的兴趣，更没有了买Switch的想法，一个原因是一直没找到能打开的nsp文件，另一个原因是实在肝不动游戏了。
+之前一直想玩王国之泪，但是最近却突然没有了兴趣，更没有了买Switch的想法，一个原因是一直没找到能打开的nsp文件，另一个原因是实在肝不动游戏了。
 
 前几天买了狼蛛的75键键盘，手感很不错，虽然这个RGB灯光并不在我的审美之上，个人觉得这个RGB灯效有点花里胡哨了。但是无奈这个键盘的品控实在是太差了，原本打算退货了重新下单， 但是无力吐槽京东这个退款不退优惠券的操作。
 
